--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   }
   h2 {
     font-size: 32px;
-    display: block;
+    text-align: center;
   }
   h3 {
     text-align: center;
@@ -50,12 +50,20 @@ body {
   p {
     text-align: center;
   }
-  img {
-    display: none;
-  }
+
   a {
     display: block;
     text-align: center;
+  }
+  .projecttitle {
+    text-align: center;
+  }
+  .projectimage {
+    display: none;
+  }
+
+  #aboutme-images {
+    display: inline;
   }
 }
 
